--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,12 @@ h2 {
   margin-left: 50px;
 }
 
+snow
+body {
+  margin: 0;
+  font: normal 75% Arial, Helvetica, sans-serif;
+}
+
 canvas {
   display: block;
   vertical-align: bottom;
