--- a/css/styles.scss
+++ b/css/styles.scss
@@ -240,12 +240,12 @@ h2{
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%232e2c3a' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
     margin-left: 50px;
 }
-snow
-/* ---- reset ---- */ 
-body{ 
-  margin:0; 
-  font:normal 75% Arial, Helvetica, sans-serif; 
-}
+// snow
+// /* ---- reset ---- */ 
+// body{ 
+//   margin:0; 
+//   font:normal 75% Arial, Helvetica, sans-serif; 
+// }
 canvas{ 
   display: block; 
   vertical-align: bottom; 
